bookstore-svc.yml
apiVersion: v1
kind: Service
metadata:
        name: bookstore-service
spec:
        selector:
                app: bookstore-app
        type: ClusterIP
        clusterIP: None
        ports:
        - port: 8080
