envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
 name: envoy-conf
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 8090
    static_resources:
      listeners:
      - name: bookstore-listener
        address:
          socket_address:
            protocol: TCP 
            address: 0.0.0.0
            port_value: 8000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_https
              route_config:
                name: local_route
                virtual_hosts:
                - name: https
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: bookstore-service
              http_filters:
              - name: envoy.filters.http.jwt_authn
                config:
                  providers:
                    oidc_provider:
                      issuer: test@gmail.com
                      # audiences:
                      #   - bookstore
                      local_jwks:
                        filename: /etc/jwt/jwt_key.json
                  rules:
                  - match: { prefix: "/" }
                    requires:
                      provider_name: oidc_provider
              - name: envoy.filters.http.grpc_web
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
              - name: envoy.filters.http.cors
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: "h2,http/1.1"
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/ssl/envoy/tls.crt"
                    private_key:
                      filename: "/etc/ssl/envoy/tls.key"
      clusters:
      - name: bookstore-service
        connect_timeout: 0.5s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        # tls_context: {}
        load_assignment:
          cluster_name: bookstore-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: bookstore-service
                    port_value: 8080
