envoy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: envoy
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: envoy
        template:
                metadata:
                        labels:
                                app: envoy
                spec:
                        containers:
                        - name: envoy
                          image: envoyproxy/envoy-alpine:v1.16.0
                          command: ["envoy"]
                          args: ["-l", "trace", "-c", "/etc/envoy/envoy.yaml"]
                          ports:
                          - name: https
                            containerPort: 8000
                          volumeMounts:
                          - name: config
                            mountPath: /etc/envoy/
                          - name: certs
                            mountPath: /etc/ssl/envoy/
                          - name: jwt
                            mountPath: /etc/jwt/
                        volumes:
                        - name: config
                          configMap:
                                name: envoy-conf
                        - name: certs
                          secret:
                                secretName: envoy-certs
                        - name: jwt
                          configMap:
                                name: jwt-key
