envoy-service.yml
apiVersion: v1
kind: Service
metadata:
        name: envoy
spec:
        type: NodePort
        selector:
                app: envoy
        ports:
        - port: 9080
          targetPort: 8000
